homeassistant/ha-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: home
  labels:
    app.kubernetes.io/name: homeassistant
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homeassistant
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homeassistant
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: UTC
          name: homeassistant
          image: ghcr.io/home-assistant/home-assistant:2026.3.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8123
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: homeassistant-config
            - name: ha-config-cm
              mountPath: /config/configuration.yaml
              subPath: configuration.yaml
            - name: ssh-key-volume
              mountPath: /config/.ssh
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: homeassistant-config
          persistentVolumeClaim:
            claimName: homeassistant-config-pvc
        - configMap:
            name: homeassistant-config-cm
          name: ha-config-cm
        - name: ssh-key-volume
          secret:
            secretName: nas-ssh-key
            defaultMode: 0400
