homeassistant/ha-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: home
  labels:
    app.kubernetes.io/name: homeassistant
spec:
  type: ClusterIP
  ports:
    - name: "8123"
      port: 8123
      targetPort: 8123
  selector:
    app.kubernetes.io/name: homeassistant
