homeassistant/ha-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant-router
  namespace: home
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homeassistant.attias.io`)
      kind: Rule
      services:
        - name: homeassistant
          port: 8123
  tls:
    certResolver: le
