homeassistant/homeassistant.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-router
  namespace: home
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homeassistant.attias.io`)
      kind: Rule
      services:
        - name: home-assistant
          port: 8080
  tls:
    certResolver: le
